--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       content="photographer portfolio, creative freelancer, lifestyle photography, personal brand"
     />
     <meta name="author" content="Simone | Front-end Developer & Creative" />
-    <title>[Photographer Name] | Freelance Photographer</title>
+    <title>Outdoor Snaps | Freelance Photographer</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap"
@@ -22,7 +22,7 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <div class="logo">📸 [Photographer Name]</div>
+        <div class="logo">Outdoor Snaps</div>
         <ul class="nav-links">
           <li><a href="#bio">Bio</a></li>
           <li><a href="#portfolio">Work</a></li>
@@ -30,9 +30,9 @@
         </ul>
       </nav>
       <div class="hero">
-        <h1>Hi, I’m [Photographer Name]</h1>
+        <h1>Hi, I’m Maison</h1>
         <p>
-          Freelance photographer capturing soft, soulful moments in natural
+          Freelance photographer capturing outdoors, soulful moments in natural
           light.
         </p>
         <a href="#contact" class="btn">Let’s Work Together</a>
@@ -43,19 +43,24 @@
       <section id="bio" class="section bio">
         <h2>About Me</h2>
         <p>
-          I’m a Cape Town-based creative with a love for cozy storytelling, soft
-          tones, and capturing humans just as they are. Whether it’s a dreamy
-          portrait or a brand shoot, I blend aesthetic with authenticity to tell
-          your visual story ✨
+          I’m a creative itrovert with a love for nature, outdoor adventures,
+          and capturing the beauty in it all. I blend aesthetic with
+          authenticity to tell a visual story
         </p>
       </section>
 
       <section id="portfolio" class="section portfolio">
         <h2>Selected Work</h2>
         <div class="gallery">
-          <img src="photo1.jpg" alt="Outdoor portrait in soft lighting" />
-          <img src="photo2.jpg" alt="Brand shoot for cozy café" />
-          <img src="photo3.jpg" alt="Creative lifestyle editorial" />
+          <img
+            src="images/pexels-988607171-31654293.jpg"
+            alt="Outdoor wetlands with greenary"
+          />
+          <img
+            src="images/pexels-nejc-kosir-108379-338936.jpg"
+            alt="Outdoors whimsey forest"
+          />
+          <img src="images/pexels-pixabay-163848.jpg" alt="desert highway" />
         </div>
       </section>
 
@@ -69,7 +74,7 @@
           <input type="email" name="email" placeholder="Your Email" required />
           <textarea
             name="message"
-            placeholder="Tell me about your project 💌"
+            placeholder="Tell me about your project "
             required
           ></textarea>
           <button type="submit" class="btn">Send Message</button>
@@ -78,7 +83,7 @@
     </main>
 
     <footer>
-      <p>Made with love by Simone 🌸</p>
+      <p>Made by Sim-Builds</p>
     </footer>
 
     <script src="script.js"></script>
